# simdecisions-portfolio

./: .gitignore  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  llms.txt  metadata.json  pyproject.toml  railway.toml  vercel.json
.deia/: BOOT.md  DEPLOYMENT.md  HIVE.md  PHASE3-VALIDATION.md  PHASE4-STATUS.md  QLAUNCH.md  playback.db  task-registry.md
_tools/: INDEX.md  ONET_README.md  SMOKE-TEST-AUDIT-FIX-001.py  add_game_states.py  analyze_swebench.py  benchmark.py  benchmark_preflight.py  bls_wage_ingest.py  bug_msg.txt  build_index.py  build_summary.py  cf-dns-update.json  cf_update_dns.py  check_active.py  check_bee_responses.py  check_bees.py  check_cost.py  check_flappy.py  check_heartbeat.py  check_queens.py  check_queue_status.py  check_railway_env.py  compare_intentions.py  count_active.py  count_color_violations.py  cross_reference.py  des_investigation_sims.py  estimates.py  estimates_db.py  extract_files_modified.py  factory_report.py  (+42 more)
hodeia_auth/: INDEX.md  config.py  db.py  dependencies.py  main.py  models.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  schemas.py
hodeia_auth/routes/: INDEX.md  __init__.py  bot_token.py  dev_login.py  email_verify.py  jwks.py  login.py  mfa.py  mfa_setup.py  oauth.py  password_reset.py  profile.py  recovery_email.py  register.py  sessions.py  token.py
hodeia_auth/services/: INDEX.md  __init__.py  audit.py  bot_token.py  github.py  google.py  jwt.py  mfa.py  password.py  reset_token.py  token.py
hodeia_auth/tests/: INDEX.md  __init__.py  conftest.py  test_bot_token.py  test_google_oauth.py  test_jwt.py  test_password.py  test_routes.py  test_token_service.py
(+9099 files in other folders)
