[project]
name = "hodeia-auth"
version = "0.1.0"
description = "Hodeia identity and SSO service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "sqlalchemy>=2.0",
    "bcrypt>=4.1",
    "pyjwt[crypto]>=2.8",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
